deploy/zbox/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dcms
  labels:
    app.kubernetes.io/name: dcms
